versions/v1.2/1.2.1/nohup.out
  File "bot.py", line 206
    <<<<<<< HEAD
    ^
IndentationError: unexpected unindent
